--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# personal note
+NOTE.md
+TODO.md
+FEATURES.md
