--- a/.env.default
+++ b/.env.default
@@ -1,4 +1,4 @@
 JWT_SECRET=caigicungdc
-JWT_TIME_LIFE=1y
-MONGODB_URI=mongodb://127.0.0.1:27017/my-data
+JWT_EXPIRES_IN=1y
+MONGODB_URI=mongodb://127.0.0.1:27017/task-management
 PORT=5556
