--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.8",
     "bcrypt": "^5.1.1",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.2",
