--- a/.env.default
+++ b/.env.default
@@ -2,3 +2,8 @@ JWT_SECRET=caigicungdc
 JWT_EXPIRES_IN=1y
 MONGODB_URI=mongodb://127.0.0.1:27017/task-management
 PORT=5556
+
+SMTP_HOST=smptp.gmail.com
+SMTP_PORT=587
+SMTP_USER='username@gmail.com'
+SMTP_PASS='password'
