--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.2",
     "nodemailer": "^6.9.4",
@@ -37,7 +37,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -62,6 +63,10 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "resolutions": {
+    "wrap-ansi": "^7.0.0",
+    "inquirer": "^6.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
