--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "bcryptjs": "^2.4.3",
+    "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.2",
     "nodemailer": "^6.9.4",
