--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "aws-sdk": "^2.1476.0",
     "bcryptjs": "^2.4.3",
     "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
@@ -45,8 +46,10 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.2.1",
+    "@types/aws-sdk": "^2.7.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
