fix:update env.default

--- a/.env.default
+++ b/.env.default
@@ -8,4 +8,7 @@ SMTP_PORT=587
 SMTP_USER='username@gmail.com'
 SMTP_PASS='password'
 
-AWS_ACCESS_KEY='key'
+AWS_ACCESS_KEY_ID=''
+AWS_SECRET_ACCESS_KEY=''
+AWS_REGION=ap-southeast-1
+AWS_S3_BUCKET=trung-storage
