--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.2",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
